assets/css/style.css
/* Importing Google fonts */
@import url('https://fonts.googleapis.com/css2?family=Markazi+Text:wght@500;600;700&family=Montserrat:wght@400;500&family=Roboto+Condensed:ital,wght@0,400;0,700;1,700&display=swap');

/* Reset margins, padding, borders, link hover and list style */
* {
    margin: 0;
    padding: 0;
    border: none;
}

a, a:hover {
    text-decoration: none;
}

ul {
    list-style: none;
}

/* Main body format */
body {
    font-family: 'Montserrat', sans-serif;
    font-weight: 500;
    background-color: #46719c;      /* Fallback colour if problems with images */
    color: #c7c7c7;
}

/* Heading and logo */
header {
    position: absolute;     /* Position the heading to the top of the page */
    z-index: 1;             /* Position heading on top of hero-image */
    width: 100%;            /* Change dimension of header element to screen width */
    line-height: 75px;      /* Vertical alignment */
}

h1, h2 {
    font-family: "Markazi Text", sans-serif;
    font-weight: 500;
    font-size: 280%;
}

#logo {
    display: inline-block;
    margin-left: 30px;
    margin-right: 30px;
}

#logo a {
    color: #c7c7c7;
}

/* Navigation links */
nav {
    background-color: rgba(39, 58, 88, 0.8);    
    font-family: "Roboto Condensed", sans-serif;
    font-style: italic;
    font-weight: 400;
    font-size: 140%;
    float: right;
    letter-spacing: 1px;
    border-radius: 35px 0 0 35px;
}

#menu {
    margin-right: 30px;
    margin-left: 30px;
    vertical-align: bottom;
}

#menu li {
    display: inline-block;
}

#menu li a {                
    color: #c7c7c7; 
    margin-left: 5px;
}

#menu li a:hover {
    color: #75b0d8;
}

#burger {
    background-color: rgba(39, 58, 88, 0.8);
    float: right;
    width: 75px;
    height: 75px;
}

#burger img {
    height: 100%;

}

/* Hero image and cover text*/
#hero-image {
    position: relative;
    height: 100vh;
    width: 100%;
    background: url("../images/blue-tiger-hero-image.jpg") no-repeat center center;
    background-size: cover;
}

#cover-text {
    background-color: rgba(39, 58, 88, 0.8);
    color: #c7c7c7;
    position: absolute;
    width: 325px;
    height: 150px;
    top: 50%;
    left: 10%;
    padding: 0 10px;
    border-radius: 5px;
}

#cover-text h2 {
    font-weight: 700;
    font-size: 560%;
}

#cover-text h2 span {
    color: #75b0d8;        
}

#cover-text h3 {
    font-family: Montserrat, sans-serif;
    font-weight: normal;
}

/* About section */

/* Setting up the section dimensions, image and background color */
#about {
    height: 500px;
    background: url(../images/about.png) #75b0d8 no-repeat;
    background-size: contain;
    background-position: top right;
}

/* Cover text */
#about div {
    background-color: #273a58;    
    position: relative;
    width: 40%;
    top: 200px;
    left: 50px;
    padding: 15px;
    border: 5px double #46719c;
    border-radius: 5px;
}

/* Creating button with hover effect and font awsome icon */
#about div span {
    border: 2px solid #46719c;
    padding: 2px 5px;
    border-radius: 5px;
}

#about div span:hover {
    background-color: #46719c;
}

#about div span a {
    color: #c7c7c7;
}

#about div span i {
    margin-left: 20px;
    font-size: 90%;
}

/* Skills section */

/* Position, dimension and background color */
#skills {
    position: relative;
    height: 680px;
    background-color: #3C4856;
}

/* Skills section title */
#skills h2 {
    text-align: center;
    padding: 40px 0 30px 0;
}

/* Skills content wrapper size and position */
#skills-content {
    width: 80%;
    height: 70%;
    position: absolute;
    left: 10%;
}

/* Individual skill wrapper dimension and position */
.skills-container {
    margin: 10px;
    line-height: 300%;
    height: 12%;
}

/* Skills name position and dimension */
.skills-name {
    display: inline-block;
    width: 19%;
}

/* Set up individual skill look, position and position */
.skills-level-container {
    display: inline-block;
    width: 80%;
    height: 20%;
    background-color: #c7c7c7;
    border-radius: 10px;
}

/* Different skill levels */
#skills-level-1 {
    position: relative;
    background-color: #75B0D8;       
    height: 100%;
    width: 90%;
    border-radius: 10px;
}

#skills-level-2 {
    position: relative;
    background-color: #75B0D8;       
    height: 100%;
    width: 80%;
    border-radius: 10px;
}

#skills-level-3 {
    position: relative;
    background-color: #75B0D8;      
    height: 100%;
    width: 95%;
    border-radius: 10px;
}

#skills-level-4 {
    position: relative;
    background-color: #75B0D8;     
    height: 100%;
    width: 90%;
    border-radius: 10px;
}

#skills-level-5 {
    position: relative;
    background-color: #75B0D8;      
    height: 100%;
    width: 85%;
    border-radius: 10px;
}

#skills-level-6 {
    position: relative;
    background-color: #75B0D8;      
    height: 100%;
    width: 95%;
    border-radius: 10px;
}

#skills-level-7 {
    position: relative;
    background-color: #75B0D8;      
    height: 100%;
    width: 70%;
    border-radius: 10px;
}

/* Set up skill level indicator */
.skills-indicator {
    position: absolute;
    background-color: #75B0D8;
    width: 25px;
    height: 25px;
    left: 97.5%;
    bottom: -7px;
    border-radius: 50%;
}

/* Clients section */

/* Position, dimension and background color */
#clients {
    height: 450px;
    background-color: #212f49;
}

/* Clients section title */
#clients h2 {
    text-align: center;
    padding: 40px 0 30px 0;
}

/* Clients content wrapper size and position */
#clients-content {
    padding-top: 50px;
    width: 80%;
    height: 50%;
    position: relative;
    margin: 0 auto;
    text-align: center;
    box-sizing: border-box;
}

/* Set up individual client wrapper */
#clients-content div {
    margin: 5px auto; 
    width: 19%;
    height: 50%;
    display: inline-block;
}
/* ... */

